// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataListItem renders correctly 1`] = `
<vlayout-stub tag="div" wrap="true" class="vd-data-list-item">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="vd-data-list-item-label caption" style="color: rgba(0, 0, 0, 0.6);">
      Test
    </div>
    <div class="vd-data-list-item-value"><span class="body-1">
					…
				</span></div>
    <div class="vd-data-list-item-action">
      <!---->
    </div>
  </div>
</vlayout-stub>
`;

exports[`DataListItem renders correctly with a value 1`] = `
<vlayout-stub tag="div" wrap="true" class="vd-data-list-item">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="vd-data-list-item-label caption" style="color: rgba(0, 0, 0, 0.6);">
      Test
    </div>
    <div class="vd-data-list-item-value"><span class="body-1">
					value
				</span></div>
    <div class="vd-data-list-item-action">
      <!---->
    </div>
  </div>
</vlayout-stub>
`;

exports[`DataListItem renders correctly with an action 1`] = `
<vlayout-stub tag="div" wrap="true" class="vd-data-list-item">
  <!---->
  <div class="vd-data-list-item-content">
    <div class="vd-data-list-item-label caption" style="color: rgba(0, 0, 0, 0.6);">
      Test
    </div>
    <div class="vd-data-list-item-value"><span class="body-1">
					…
				</span></div>
    <div class="vd-data-list-item-action">
      <vbtn-stub tag="button" activeclass="" text="true" type="button" class="body-1 text-none accent--text text-bold px-0 vd-data-list-item-action-btn">
        action
      </vbtn-stub>
    </div>
  </div>
</vlayout-stub>
`;
